Modified html files

--- a/personal/templates/personal/includes/conferences.html
+++ b/personal/templates/personal/includes/conferences.html
@@ -2,15 +2,58 @@
 <br>
 <div id="research">
 
-<div class="containeri-fluid" align="center">
+<div class="container-fluid">
 <div class="text-center">
-  <h3>CONFERENCES</h3> 
+  <h3>RECENT TALKS</h3> 
+  <br>
 </div>
   <div class="row">
+    <div class="col-sm-3 col-sm-offset-3 col-sm-offset-3">
+	    <a href="https://indico.cern.ch/event/685849" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/kopaonik1.jpg' %}" alt="kopaonik picture" width=200 height=auto></img></a>
+    </div>
     <div class="col-sm-5">
+      <h4>Excited QCD 2018</h4> 
+      <p>
+      Excited QCD 2018
+      <br> Kopaonik, Serbia, Mar 11-15, 2018
+      <br>Talk on an invitation. My contribution can be found on <a href="https://indico.cern.ch/event/685849/contributions/2905520/" /target="blank">indico pages</a>.
+      </p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-sm-3 col-sm-offset-3">
+	    <a href="https://indico.cern.ch/event/684233/" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/uwr.jpg' %}" alt="uwr logo" width=200 height=auto></img></a>
+    </div>
+    <div class="col-sm-5">
+      <h4>Polish Workshop on RHIC</h4> 
+      <p>
+      XIII Polish Workshop on Relativistic Heavy-Ion Collisions
+      <br> Wrocław, Poland, Jan 5-7, 2018
+      <br>My contribution can be found on <a href="https://indico.cern.ch/event/684233/contributions/2834333/" target="blank">indico pages</a>.
+      </p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-sm-3 col-sm-offset-3">
+	    <a href="https://www.bnl.gov/cpod17/" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/cpod17.png' %}" alt="cpod logo" width=200 height=auto></img></a>
+    </div>
+    <div class="col-sm-5">
+      <h4>CPOD 2017 Conference</h4> 
+      <p>
+      The conference on Critical Point and the Onset of Deconfinement.
+      <br> Stony Brook, NY, USA, August 7–11, 2017
+      <br>My contribution can be found on <a href="https://indico.bnl.gov/event/2866/contributions/7445/"  target="blank">indico pages</a>.
+      </p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-sm-3 col-sm-offset-3">
       <a href="http://www.openreadings.eu/" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/openreadings.png' %}" alt="open-readings logo" width=200 height=auto></img></a>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-5">
       <h4>Open Readings 2017</h4> 
       <p>
       60th International Conference for Students of Physics and Natural Sciences
@@ -22,10 +65,10 @@
   </div>
   <hr>
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-3 col-sm-offset-3">
       <a href="http://www.ujk.edu.pl/homepages/mryb/12thworkshop/" target="blank"><img class="img-thumbnail slideanim" src="http://www.ujk.edu.pl/homepages/mryb/12thworkshop/figures/Wersja_Ang2.gif" alt="ujk logo" width=200 height=auto></img></a>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-5">
       <h4>Polish Workshop on RHIC</h4> 
       <p>
       XII Polish Workshop on Relativistic Heavy-Ion Collisions
@@ -36,10 +79,10 @@
   </div>
   <hr>
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-3 col-sm-offset-3">
 	    <a href="http://ift.uni.wroc.pl/~cpod2016/" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/cpod.png' %}" alt="cpod logo" width=200 height=auto></img></a>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-5">
       <h4>CPOD 2016 Conference</h4> 
       <p>
       The conference on Critical Point and the Onset of Deconfinement.
@@ -50,15 +93,25 @@
   </div>
   <hr>
   <div class="row">
-    <div class="col-sm-5">
+    <div class="col-sm-3 col-sm-offset-3">
       <br>
       <a href="http://shine.web.cern.ch/" target="blank"><img class="img-thumbnail slideanim" src="http://shine.web.cern.ch/sites/shine.web.cern.ch/files/shineBlueGray6.png" alt="na61/shine logo" width=200 height=auto></img></a>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-5">
       <h4>NA61/SHINE Collaboration Meetings</h4> 
       <p>
         <table class="table table-hover">
           <tbody>
+            <tr>
+              <td>May 2018</td>
+              <td>St. Petersburg (remote participation)</td>
+              <td><a href="https://indico.cern.ch/event/674625/" target="blank">indico</a></td>
+            </tr>
+            <tr>
+              <td>Sep 2017</td>
+              <td>CERN, Prevessin (remote participation)</td>
+              <td><a href="https://indico.cern.ch/event/659866/" target="blank">indico</a></td>
+            </tr>
             <tr>
               <td>May 2017</td>
               <td>Moscow</td>
