--- a/personal/static/personal/css/style.css
+++ b/personal/static/personal/css/style.css
@@ -310,3 +310,27 @@ footer .glyphicon {
   color: black;
   text-align: center;
 }
+
+
+
+ul.network-icon {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin-top: 30px;
+  color: #303030;
+}
+
+.network-icon li {
+  margin-right: 10px;
+}
+
+.network-icon li:last-of-type {
+  margin-right: 0;
+}
+
+.network-icon li:hover {
+  transform: scale(1.2)
+}
