--- a/personal/templates/personal/header.html
+++ b/personal/templates/personal/header.html
@@ -15,6 +15,9 @@
 	<link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.1/css/academicons.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
 	
 	<style type="text/css">
 		html,
@@ -41,7 +44,6 @@
 		<li><a href="/#about">ABOUT ME</a></li>
 		<li><a href="/#research">RESEARCH</a></li>
 		<li><a href="/#teaching">TEACHING</a></li>
-		<li><a href="/#links">LINKS</a></li>
 		<li><a href="/#contact">CONTACT</a></li>
 	      </ul>
 	    </div>
