--- a/personal/templates/personal/includes/about.html
+++ b/personal/templates/personal/includes/about.html
@@ -8,16 +8,50 @@
 	<br>
 	  <div class="row">
 	    <div class="col-sm-4">
+	      <div class="row">
 		<img src="{% static 'personal/images/ph.jpg' %}" class="slideanim responsive-img" style='max-height:240px;' alt="face">
+	      </div>
+
+	      <div class="row">
+	      <ul class="network-icon" aria-hidden="true" style="font-size:40px">
+		<li>
+		  <a href="mailto:maciej.piotr.lewicki@cern.ch" target="_blank">
+		    <i class="fa fa-envelope big-icon"></i>
+		  </a>
+		</li>
+		<li>
+		  <a href="https://scholar.google.com/citations?user=QoXEy-gAAAAJ" target="_blank">
+		    <i class="ai ai-google-scholar big-icon"></i>
+		  </a>
+		</li>
+		<li>
+		  <a href="http://inspirehep.net/author/profile/Maciej.Lewicki.1" target="_blank">
+		    <i class="ai ai-inspire big-icon"></i>
+		  </a>
+		</li>
+		<li>
+		  <a href="https://www.researchgate.net/profile/Maciej_Lewicki" target="_blank">
+		    <i class="ai ai-researchgate big-icon"></i>
+		  </a>
+		</li>
+		<li>
+		  <a href="https://www.quora.com/profile/Maciej-Lewicki" target="_blank" style="font-size:35px">
+		    <i class="fa fa-quora big-icon"></i>
+		  </a>
+		</li>
+		<li>
+		  <a href="https://github.com/malewick" target="_blank">
+		    <i class="fa fa-github big-icon"></i>
+		  </a>
+		</li>
+	      </ul>
+	      </div>
 	    </div>
 	    <div class="col-sm-8" align="left">
 	      <p>
 	      I am a doctorate student at University of Wrocław advised by <a href="https://pl.wikipedia.org/wiki/Ludwik_Turko">prof. Ludwik Turko</a> and <a href="https://en.wikipedia.org/wiki/Marek_Gazdzicki">prof. Marek Gaździcki</a>.
 	      My main research focus is on heavy ion collisions, within the scope of the <a href="http://shine.web.cern.ch/">NA61/SHINE</a> experiment at CERN and the <a href="http://ift.uni.wroc.pl">Division of Elementary Particle Theory</a>.<br>
 	      I study the collisions of ions of Argon and Scandium, looking forward to observe indications of the onset of deconfinement.
-	      </p>
-	      <p><br>
-	      I am catholic, scout and a rambler.
 	      </p>
 	      <br>
 	      <hr>
@@ -30,12 +64,12 @@
 		</div>
 		<div class="col-sm-4">
 		  <button type="button" class="btn btn-default btn-lg">
-		    <a href="cv_en.pdf" target="blank"><span class="glyphicon glyphicon-file"></span> in English</a> 
+			  <a href="{% static 'personal/documents/cv_en_extended.pdf' %}" target="_blank"><span class="glyphicon glyphicon-file"></span> in English</a> 
 		  </button>
 		</div>
 		<div class="col-sm-4">
 		  <button type="button" class="btn btn-default btn-lg">
-		    <a href="cv_pl.pdf" target="blank"><span class="glyphicon glyphicon-file"></span> in Polish</a> 
+		    <a href="{% static 'personal/documents/cv_pl_extended.pdf' %}" target="_blank"><span class="glyphicon glyphicon-file"></span> in Polish</a> 
 		  </button>
 		</div>
 	      </div>
