--- a/personal/templates/personal/includes/about.html
+++ b/personal/templates/personal/includes/about.html
@@ -7,13 +7,13 @@
 	<br>
 	<br>
 	  <div class="row">
-	    <div class="col-sm-4">
+	    <div class="col-sm-5">
 	      <div class="row">
 		<img src="{% static 'personal/images/ph.jpg' %}" class="slideanim responsive-img" style='max-height:240px;' alt="face">
 	      </div>
 
 	      <div class="row">
-	      <ul class="network-icon" aria-hidden="true" style="font-size:40px">
+	      <ul class="network-icon" style="font-size:40px">
 		<li>
 		  <a href="mailto:maciej.piotr.lewicki@cern.ch" target="_blank">
 		    <i class="fa fa-envelope big-icon"></i>
@@ -47,11 +47,11 @@
 	      </ul>
 	      </div>
 	    </div>
-	    <div class="col-sm-8" align="left">
+	    <div class="col-sm-7" align="left">
 	      <p>
 	      I am a doctorate student at University of Wrocław advised by <a href="https://pl.wikipedia.org/wiki/Ludwik_Turko">prof. Ludwik Turko</a> and <a href="https://en.wikipedia.org/wiki/Marek_Gazdzicki">prof. Marek Gaździcki</a>.
 	      My main research focus is on heavy ion collisions, within the scope of the <a href="http://shine.web.cern.ch/">NA61/SHINE</a> experiment at CERN and the <a href="http://ift.uni.wroc.pl">Division of Elementary Particle Theory</a>.<br>
-	      I study the collisions of ions of Argon and Scandium, looking forward to observe indications of the onset of deconfinement.
+	      I study the collisions of ions of Argon and Scandium, searching for the indications of the onset of deconfinement through the analysis of charged hadron yields and distributions.
 	      </p>
 	      <br>
 	      <hr>
