--- a/blog/templates/blog/header.html
+++ b/blog/templates/blog/header.html
@@ -37,16 +37,8 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span></a>
-	    </div>
-	    <div class="collapse navbar-collapse" id="myNavbar">
-	      <ul class="nav navbar-nav navbar-right">
-		<li><a href="/#about">ABOUT ME</a></li>
-		<li><a href="/#research">RESEARCH</a></li>
-		<li><a href="/#teaching">TEACHING</a></li>
-		<li><a href="/#contact">CONTACT</a></li>
-		<li><a href="/blog">BLOG</a></li>
-	      </ul>
+	      <a class="navbar-brand" href="/">home <span class="glyphicon glyphicon-home"></span></a>
+	      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-book"></span> blog</a>
 	    </div>
 	  </div>
 	</nav>
@@ -59,7 +51,7 @@
 		<div class="row">
 				  <br>
 				  <center>
-				  <h3>Personal Website</h3>
+				  <h3>My Scientific Bookkeeping</h3>
 				  </center>
 		</div><hr>
 
