--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,4 +1,4 @@
-{% extends "personal/header.html" %}
+{% extends "blog/header.html" %}
 {% block content %}
 
 <h3><a href="/blog/{{post.id}}">{{ post.title }}</a></h3>
