--- a/personal/templates/personal/includes/contact.html
+++ b/personal/templates/personal/includes/contact.html
@@ -4,8 +4,8 @@
 <div class="well well-lg text-center">
   <h2>Contact</h2>
 </div>
-  <div class="row slideanim">
-    <div class="col-sm-5">
+  <div class="row slideanim" align="left">
+    <div class="col-sm-4 col-sm-offset-3">
             <p><span class="glyphicon glyphicon-map-marker"></span> room 413 @ <a href="http://ift.uni.wroc.pl">IFT</a></p>
       <p><span class="glyphicon glyphicon-phone-alt"></span> +48 71 3759388</p>
       <p><span class="glyphicon glyphicon-envelope"></span> malewick@cern.ch</p>
