--- a/personal/templates/personal/includes/research.html
+++ b/personal/templates/personal/includes/research.html
@@ -6,17 +6,16 @@
 </div>
 </div>
 <div class="container" align="center">
-<div class="text-center">
   <h3>PROJECTS</h3> 
+  <br>
 </div>
   <div class="row">
-    <div class="col-sm-6">
-<br><br>
-<a href="http://shine.web.cern.ch" target="blank"><img class="slideanim img-thumbnail" src="{% static 'personal/images/arsc_event.png' %}" alt="ar sc collisions view" width=400 height=auto></img></a>
+    <div class="col-sm-3 col-sm-offset-3">
+<a href="http://shine.web.cern.ch" target="blank"><img class="slideanim img-thumbnail" src="{% static 'personal/images/arsc_event.png' %}" alt="ar sc collisions view" width=500 height=auto></img></a>
     </div>
-    <div class="col-sm-6"> 
+    <div class="col-sm-3"> 
       <a href="http://shine.web.cern.ch" target="blank"><h4>NA61/SHINE collaboration at CERN</h4></a>
-      <p><br>The NA61/SHINE's primary goal is to investigate the phase transitions present in the theory of QCD by means of studying heavy ion collisions at ultra-relativistic energies.
+      <p>The NA61/SHINE's primary goal is to investigate the phase transitions present in the theory of QCD by means of studying heavy ion collisions at ultra-relativistic energies.
 <br>
 My work concentrates on analysis of the spectra of hadrons produced in collisions of Argon and Scandium ions.
 <br>My activities for the experiment were partially supported by National Science Center of Poland - HARMONIA grants
@@ -26,13 +25,11 @@ My work concentrates on analysis of the spectra of hadrons produced in collision
   </div>
   <hr>
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-3 col-sm-offset-3">
       <h4>Dose Estimation Analysis</h4> 
-      <a href="http://panoramix.ift.uni.wroc.pl/~lewy/dosematic.html" target="blank"><img src="{% static 'personal/images/Dosematic.png' %}" alt="dosematic logo" width=50%></img></a>
-      <p><br>A statistical analysis framework designed to estimate the radiation dose based on observed data. Serves as a data container, allows for function fitting and calculates dose estimates along with statistical errors. </p>
+      <p>Statistical analysis framework designed to estimate the radiation dose based on observed data. Serves as a data container, allows for function fitting and calculates dose estimates along with statistical errors. </p>
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-3">
 	    <a href="http://panoramix.ift.uni.wroc.pl/~lewy/dosematic.html" target="blank"><img class="slideanim img-thumbnail" src="{% static 'personal/images/view.png' %}" alt="dosematic view" width=400 height=auto></img></a>
     </div>
-  </div>
 </div>
