updated CVs and conferences

--- a/personal/templates/personal/includes/conferences.html
+++ b/personal/templates/personal/includes/conferences.html
@@ -9,6 +9,34 @@
 </div>
   <div class="row">
     <div class="col-sm-3 col-sm-offset-3 col-sm-offset-3">
+	    <a href="https://indico.cern.ch/event/827578/" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/krynica.jpg' %}" alt="Picture from Krynica-Zdrój" width=200 height=auto></img></a>
+    </div>
+    <div class="col-sm-5">
+      <h4>Excited QCD 2020</h4> 
+      <p>
+      Excited QCD 2020
+      <br> Krynica-Zdrój, Poland, Feb 2-8, 2020
+      <br>My contribution can be found on <a href="https://indico.cern.ch/event/827578/contributions/3697377/" /target="blank">indico pages</a>.
+      </p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-sm-3 col-sm-offset-3">
+	    <a href="http://www.physics.ntua.gr/corfu2018/cp.html" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/corfu.jpg' %}" alt="Picture from Corfu" width=200 height=auto></img></a>
+    </div>
+    <div class="col-sm-5">
+      <h4>CPOD 2019 Conference</h4> 
+      <p>
+      The conference on Critical Point and the Onset of Deconfinement.
+      <br> Corfu, Greece, September 24–28, 2019
+      <br>My contribution can be found on <a href="https://indico.cern.ch/event/760216/contributions/3153981/"  target="blank">indico pages</a>.
+      </p>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-sm-3 col-sm-offset-3 col-sm-offset-3">
 	    <a href="https://indico.cern.ch/event/685849" target="blank"><img class="img-thumbnail slideanim" src="{% static 'personal/images/kopaonik1.jpg' %}" alt="kopaonik picture" width=200 height=auto></img></a>
     </div>
     <div class="col-sm-5">
@@ -59,6 +87,31 @@
       <p>
         <table class="table table-hover">
           <tbody>
+            <tr>
+              <td>Feb 2019 (remote participation)</td>
+              <td>CERN, Prevessin</td>
+              <td><a href="https://indico.cern.ch/event/862399/" target="blank">indico</a></td>
+            </tr>
+            <tr>
+              <td>Sep 2019</td>
+              <td>CERN, Prevessin</td>
+              <td><a href="https://indico.cern.ch/event/831754/" target="blank">indico</a></td>
+            </tr>
+            <tr>
+              <td>Feb 2019</td>
+              <td>Warsaw</td>
+              <td><a href="https://indico.cern.ch/event/763285/" target="blank">indico</a></td>
+            </tr>
+            <tr>
+              <td>Sep 2018</td>
+              <td>CERN, Prevessin</td>
+              <td><a href="https://indico.cern.ch/event/711900/" target="blank">indico</a></td>
+            </tr>
+            <tr>
+              <td>May 2018</td>
+              <td>St. Petersburg (remote participation)</td>
+              <td><a href="https://indico.cern.ch/event/674625/" target="blank">indico</a></td>
+            </tr>
             <tr>
               <td>May 2018</td>
               <td>St. Petersburg (remote participation)</td>
