Updated dosematic link

--- a/personal/templates/personal/includes/research.html
+++ b/personal/templates/personal/includes/research.html
@@ -30,6 +30,6 @@ My work concentrates on analysis of the spectra of hadrons produced in collision
       <p>Statistical analysis framework designed to estimate the radiation dose based on observed data. Serves as a data container, allows for function fitting and calculates dose estimates along with statistical errors. </p>
     </div>
     <div class="col-sm-3">
-	    <a href="http://panoramix.ift.uni.wroc.pl/~lewy/dosematic.html" target="blank"><img class="slideanim img-thumbnail" src="{% static 'personal/images/view.png' %}" alt="dosematic view" width=400 height=auto></img></a>
+	    <a href="http://malewick.web.cern.ch/dosematic/" target="blank"><img class="slideanim img-thumbnail" src="{% static 'personal/images/view.png' %}" alt="dosematic view" width=400 height=auto></img></a>
     </div>
 </div>
